Homework 5/parser.output
Terminals unused in grammar

    SPEC
    KEYWORD


State 1 conflicts: 2 shift/reduce
State 20 conflicts: 1 shift/reduce
State 66 conflicts: 2 reduce/reduce
State 174 conflicts: 2 shift/reduce
State 182 conflicts: 1 shift/reduce
State 209 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: declList

    2 declList: declList decl
    3         | decl

    4 decl: varDecl
    5     | funDecl
    6     | error

    7 varDecl: typeSpec varDeclList SEMICOLON
    8        | error varDeclList SEMICOLON
    9        | typeSpec error SEMICOLON

   10 scopedVarDecl: STATIC typeSpec varDeclList SEMICOLON
   11              | typeSpec varDeclList SEMICOLON

   12 varDeclList: varDeclList COMMA varDeclInit
   13            | varDeclInit
   14            | varDeclList COMMA error
   15            | error

   16 varDeclInit: varDeclId
   17            | varDeclId COLON simpleExp
   18            | error COLON simpleExp

   19 varDeclId: ID
   20          | ID LBRACKET NUMCONST RBRACKET
   21          | ID LBRACKET error
   22          | error RBRACKET

   23 typeSpec: BOOL
   24         | CHAR
   25         | INT

   26 funDecl: typeSpec ID LPAREN parms RPAREN compoundStmt
   27        | ID LPAREN parms RPAREN compoundStmt
   28        | typeSpec error
   29        | typeSpec ID LPAREN error
   30        | ID LPAREN error
   31        | ID LPAREN parms RPAREN error

   32 parms: parmList
   33      | %empty

   34 parmList: parmList SEMICOLON parmTypeList
   35         | parmTypeList

   36 parmTypeList: typeSpec parmIdList
   37             | typeSpec error

   38 parmIdList: parmIdList COMMA parmId
   39           | parmId
   40           | parmIdList COMMA error
   41           | error

   42 parmId: ID
   43       | ID LBRACKET RBRACKET

   44 stmt: matchedif
   45     | unmatchedif

   46 expStmt: exp SEMICOLON
   47        | SEMICOLON
   48        | error SEMICOLON

   49 compoundStmt: START localDecls stmtList STOP

   50 localDecls: localDecls scopedVarDecl
   51           | %empty

   52 stmtList: stmtList stmt
   53         | %empty

   54 matchedif: endStmt
   55          | IF simpleExp THEN matchedif ELSE matchedif
   56          | WHILE simpleExp DO matchedif
   57          | FOR ID ASGN iterRange DO matchedif
   58          | IF error
   59          | IF error ELSE matchedif
   60          | IF error THEN matchedif ELSE matchedif
   61          | WHILE error DO matchedif
   62          | WHILE error
   63          | FOR ID ASGN error DO matchedif
   64          | FOR error

   65 unmatchedif: IF simpleExp THEN matchedif ELSE unmatchedif
   66            | WHILE simpleExp DO unmatchedif
   67            | FOR ID ASGN iterRange DO unmatchedif
   68            | IF simpleExp THEN stmt
   69            | IF error THEN stmt
   70            | IF error THEN matchedif ELSE unmatchedif

   71 endStmt: expStmt
   72        | compoundStmt
   73        | returnStmt
   74        | breakStmt

   75 iterRange: simpleExp TO simpleExp
   76          | simpleExp TO simpleExp BY simpleExp
   77          | simpleExp TO error
   78          | error BY error
   79          | simpleExp TO simpleExp BY error

   80 returnStmt: RETURN SEMICOLON
   81           | RETURN exp SEMICOLON
   82           | RETURN error SEMICOLON

   83 breakStmt: BREAK SEMICOLON

   84 exp: mutable assignop exp
   85    | mutable INC
   86    | mutable DEC
   87    | simpleExp
   88    | error assignop exp
   89    | mutable assignop error
   90    | error INC
   91    | error DEC

   92 assignop: ASGN
   93         | ADDASGN
   94         | MINUSASGN
   95         | MULTASGN
   96         | DIVASGN

   97 simpleExp: simpleExp OR andExp
   98          | andExp
   99          | simpleExp OR error

  100 andExp: andExp AND unaryRelExp
  101       | unaryRelExp
  102       | andExp AND error

  103 unaryRelExp: NOT unaryRelExp
  104            | relExp
  105            | NOT error

  106 relExp: sumExp relop sumExp
  107       | sumExp

  108 relop: LESSTHAN
  109      | LEQ
  110      | GREATERTHAN
  111      | GEQ
  112      | EQUALS
  113      | NEQ

  114 sumExp: sumExp sumop mulExp
  115       | mulExp
  116       | sumExp sumop error

  117 sumop: PLUS
  118      | MINUS

  119 mulExp: mulExp mulop unaryExp
  120       | unaryExp
  121       | mulExp mulop error

  122 mulop: MULT
  123      | DIVIDE
  124      | PERCENT

  125 unaryExp: unaryop unaryExp
  126         | factor
  127         | unaryop error

  128 unaryop: MINUS
  129        | MULT
  130        | QMARK

  131 factor: mutable
  132       | immutable

  133 mutable: ID
  134        | ID LBRACKET exp RBRACKET

  135 immutable: LPAREN exp RPAREN
  136          | call
  137          | constant
  138          | LPAREN error

  139 call: ID LPAREN args RPAREN
  140     | error LPAREN

  141 args: argList
  142     | %empty

  143 argList: argList COMMA exp
  144        | exp
  145        | argList COMMA error

  146 constant: NUMCONST
  147         | CHARCONST
  148         | STRINGCONST
  149         | BOOLCONST


Terminals, with rules where they appear

    $end (0) 0
    error (256) 6 8 9 14 15 18 21 22 28 29 30 31 37 40 41 48 58 59 60 61 62 63 64 69 70 77 78 79 82 88 89 90 91 99 102 105 116 121 127 138 140 145
    ID <tokenData> (258) 19 20 21 26 27 29 30 31 42 43 57 63 67 133 134 139
    NUMCONST <tokenData> (259) 20 146
    CHARCONST <tokenData> (260) 147
    STRINGCONST <tokenData> (261) 148
    BOOLCONST <tokenData> (262) 149
    SPEC <tokenData> (263)
    KEYWORD <tokenData> (264)
    INC <tokenData> (265) 85 90
    DEC <tokenData> (266) 86 91
    NEQ <tokenData> (267) 113
    LEQ <tokenData> (268) 109
    GEQ <tokenData> (269) 111
    ASGN <tokenData> (270) 57 63 67 92
    ADDASGN <tokenData> (271) 93
    MINUSASGN <tokenData> (272) 94
    MULTASGN <tokenData> (273) 95
    DIVASGN <tokenData> (274) 96
    PLUS <tokenData> (275) 117
    MINUS <tokenData> (276) 118 128
    DIVIDE <tokenData> (277) 123
    MULT <tokenData> (278) 122 129
    EQUALS <tokenData> (279) 112
    PERCENT <tokenData> (280) 124
    COLON <tokenData> (281) 17 18
    SEMICOLON <tokenData> (282) 7 8 9 10 11 34 46 47 48 80 81 82 83
    COMMA <tokenData> (283) 12 14 38 40 143 145
    QMARK <tokenData> (284) 130
    IF <tokenData> (285) 55 58 59 60 65 68 69 70
    THEN <tokenData> (286) 55 60 65 68 69 70
    ELSE <tokenData> (287) 55 59 60 65 70
    FOR <tokenData> (288) 57 63 64 67
    BREAK <tokenData> (289) 83
    RETURN <tokenData> (290) 80 81 82
    START <tokenData> (291) 49
    STOP <tokenData> (292) 49
    WHILE <tokenData> (293) 56 61 62 66
    TO <tokenData> (294) 75 76 77 79
    DO <tokenData> (295) 56 57 61 63 66 67
    BY <tokenData> (296) 76 78 79
    NOT <tokenData> (297) 103 105
    STATIC <tokenData> (298) 10
    BOOL <tokenData> (299) 23
    CHAR <tokenData> (300) 24
    INT <tokenData> (301) 25
    LBRACKET <tokenData> (302) 20 21 43 134
    RBRACKET <tokenData> (303) 20 22 43 134
    LPAREN <tokenData> (304) 26 27 29 30 31 135 138 139 140
    RPAREN <tokenData> (305) 26 27 31 135 139
    OR <tokenData> (306) 97 99
    AND <tokenData> (307) 100 102
    LESSTHAN <tokenData> (308) 108
    GREATERTHAN <tokenData> (309) 110


Nonterminals, with rules where they appear

    $accept (55)
        on left: 0
    program (56)
        on left: 1
        on right: 0
    declList <tree> (57)
        on left: 2 3
        on right: 1 2
    decl <tree> (58)
        on left: 4 5 6
        on right: 2 3
    varDecl <tree> (59)
        on left: 7 8 9
        on right: 4
    scopedVarDecl <tree> (60)
        on left: 10 11
        on right: 50
    varDeclList <tree> (61)
        on left: 12 13 14 15
        on right: 7 8 10 11 12 14
    varDeclInit <tree> (62)
        on left: 16 17 18
        on right: 12 13
    varDeclId <tree> (63)
        on left: 19 20 21 22
        on right: 16 17
    typeSpec <type> (64)
        on left: 23 24 25
        on right: 7 9 10 11 26 28 29 36 37
    funDecl <tree> (65)
        on left: 26 27 28 29 30 31
        on right: 5
    parms <tree> (66)
        on left: 32 33
        on right: 26 27 31
    parmList <tree> (67)
        on left: 34 35
        on right: 32 34
    parmTypeList <tree> (68)
        on left: 36 37
        on right: 34 35
    parmIdList <tree> (69)
        on left: 38 39 40 41
        on right: 36 38 40
    parmId <tree> (70)
        on left: 42 43
        on right: 38 39
    stmt <tree> (71)
        on left: 44 45
        on right: 52 68 69
    expStmt <tree> (72)
        on left: 46 47 48
        on right: 71
    compoundStmt <tree> (73)
        on left: 49
        on right: 26 27 72
    localDecls <tree> (74)
        on left: 50 51
        on right: 49 50
    stmtList <tree> (75)
        on left: 52 53
        on right: 49 52
    matchedif <tree> (76)
        on left: 54 55 56 57 58 59 60 61 62 63 64
        on right: 44 55 56 57 59 60 61 63 65 70
    unmatchedif <tree> (77)
        on left: 65 66 67 68 69 70
        on right: 45 65 66 67 70
    endStmt <tree> (78)
        on left: 71 72 73 74
        on right: 54
    iterRange <tree> (79)
        on left: 75 76 77 78 79
        on right: 57 67
    returnStmt <tree> (80)
        on left: 80 81 82
        on right: 73
    breakStmt <tree> (81)
        on left: 83
        on right: 74
    exp <tree> (82)
        on left: 84 85 86 87 88 89 90 91
        on right: 46 81 84 88 134 135 143 144
    assignop <tree> (83)
        on left: 92 93 94 95 96
        on right: 84 88 89
    simpleExp <tree> (84)
        on left: 97 98 99
        on right: 17 18 55 56 65 66 68 75 76 77 79 87 97 99
    andExp <tree> (85)
        on left: 100 101 102
        on right: 97 98 100 102
    unaryRelExp <tree> (86)
        on left: 103 104 105
        on right: 100 101 103
    relExp <tree> (87)
        on left: 106 107
        on right: 104
    relop <tree> (88)
        on left: 108 109 110 111 112 113
        on right: 106
    sumExp <tree> (89)
        on left: 114 115 116
        on right: 106 107 114 116
    sumop <tree> (90)
        on left: 117 118
        on right: 114 116
    mulExp <tree> (91)
        on left: 119 120 121
        on right: 114 115 119 121
    mulop <tree> (92)
        on left: 122 123 124
        on right: 119 121
    unaryExp <tree> (93)
        on left: 125 126 127
        on right: 119 120 125
    unaryop <tree> (94)
        on left: 128 129 130
        on right: 125 127
    factor <tree> (95)
        on left: 131 132
        on right: 126
    mutable <tree> (96)
        on left: 133 134
        on right: 84 85 86 89 131
    immutable <tree> (97)
        on left: 135 136 137 138
        on right: 132
    call <tree> (98)
        on left: 139 140
        on right: 136
    args <tree> (99)
        on left: 141 142
        on right: 139
    argList <tree> (100)
        on left: 143 144 145
        on right: 141 143 145
    constant <tree> (101)
        on left: 146 147 148 149
        on right: 137


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    ID     shift, and go to state 2
    BOOL   shift, and go to state 3
    CHAR   shift, and go to state 4
    INT    shift, and go to state 5

    program   go to state 6
    declList  go to state 7
    decl      go to state 8
    varDecl   go to state 9
    typeSpec  go to state 10
    funDecl   go to state 11


State 1

    6 decl: error •
    8 varDecl: error • varDeclList SEMICOLON

    error  shift, and go to state 12
    ID     shift, and go to state 13

    $end   reduce using rule 6 (decl)
    error  [reduce using rule 6 (decl)]
    ID     [reduce using rule 6 (decl)]
    BOOL   reduce using rule 6 (decl)
    CHAR   reduce using rule 6 (decl)
    INT    reduce using rule 6 (decl)

    varDeclList  go to state 14
    varDeclInit  go to state 15
    varDeclId    go to state 16


State 2

   27 funDecl: ID • LPAREN parms RPAREN compoundStmt
   30        | ID • LPAREN error
   31        | ID • LPAREN parms RPAREN error

    LPAREN  shift, and go to state 17


State 3

   23 typeSpec: BOOL •

    $default  reduce using rule 23 (typeSpec)


State 4

   24 typeSpec: CHAR •

    $default  reduce using rule 24 (typeSpec)


State 5

   25 typeSpec: INT •

    $default  reduce using rule 25 (typeSpec)


State 6

    0 $accept: program • $end

    $end  shift, and go to state 18


State 7

    1 program: declList •
    2 declList: declList • decl

    error  shift, and go to state 1
    ID     shift, and go to state 2
    BOOL   shift, and go to state 3
    CHAR   shift, and go to state 4
    INT    shift, and go to state 5

    $end  reduce using rule 1 (program)

    decl      go to state 19
    varDecl   go to state 9
    typeSpec  go to state 10
    funDecl   go to state 11


State 8

    3 declList: decl •

    $default  reduce using rule 3 (declList)


State 9

    4 decl: varDecl •

    $default  reduce using rule 4 (decl)


State 10

    7 varDecl: typeSpec • varDeclList SEMICOLON
    9        | typeSpec • error SEMICOLON
   26 funDecl: typeSpec • ID LPAREN parms RPAREN compoundStmt
   28        | typeSpec • error
   29        | typeSpec • ID LPAREN error

    error  shift, and go to state 20
    ID     shift, and go to state 21

    varDeclList  go to state 22
    varDeclInit  go to state 15
    varDeclId    go to state 16


State 11

    5 decl: funDecl •

    $default  reduce using rule 5 (decl)


State 12

   15 varDeclList: error •
   18 varDeclInit: error • COLON simpleExp
   22 varDeclId: error • RBRACKET

    COLON     shift, and go to state 23
    RBRACKET  shift, and go to state 24

    $default  reduce using rule 15 (varDeclList)


State 13

   19 varDeclId: ID •
   20          | ID • LBRACKET NUMCONST RBRACKET
   21          | ID • LBRACKET error

    LBRACKET  shift, and go to state 25

    $default  reduce using rule 19 (varDeclId)


State 14

    8 varDecl: error varDeclList • SEMICOLON
   12 varDeclList: varDeclList • COMMA varDeclInit
   14            | varDeclList • COMMA error

    SEMICOLON  shift, and go to state 26
    COMMA      shift, and go to state 27


State 15

   13 varDeclList: varDeclInit •

    $default  reduce using rule 13 (varDeclList)


State 16

   16 varDeclInit: varDeclId •
   17            | varDeclId • COLON simpleExp

    COLON  shift, and go to state 28

    $default  reduce using rule 16 (varDeclInit)


State 17

   27 funDecl: ID LPAREN • parms RPAREN compoundStmt
   30        | ID LPAREN • error
   31        | ID LPAREN • parms RPAREN error

    error  shift, and go to state 29
    BOOL   shift, and go to state 3
    CHAR   shift, and go to state 4
    INT    shift, and go to state 5

    RPAREN  reduce using rule 33 (parms)

    typeSpec      go to state 30
    parms         go to state 31
    parmList      go to state 32
    parmTypeList  go to state 33


State 18

    0 $accept: program $end •

    $default  accept


State 19

    2 declList: declList decl •

    $default  reduce using rule 2 (declList)


State 20

    9 varDecl: typeSpec error • SEMICOLON
   15 varDeclList: error •
   18 varDeclInit: error • COLON simpleExp
   22 varDeclId: error • RBRACKET
   28 funDecl: typeSpec error •

    COLON      shift, and go to state 23
    SEMICOLON  shift, and go to state 34
    RBRACKET   shift, and go to state 24

    SEMICOLON  [reduce using rule 15 (varDeclList)]
    COMMA      reduce using rule 15 (varDeclList)
    $default   reduce using rule 28 (funDecl)


State 21

   19 varDeclId: ID •
   20          | ID • LBRACKET NUMCONST RBRACKET
   21          | ID • LBRACKET error
   26 funDecl: typeSpec ID • LPAREN parms RPAREN compoundStmt
   29        | typeSpec ID • LPAREN error

    LBRACKET  shift, and go to state 25
    LPAREN    shift, and go to state 35

    $default  reduce using rule 19 (varDeclId)


State 22

    7 varDecl: typeSpec varDeclList • SEMICOLON
   12 varDeclList: varDeclList • COMMA varDeclInit
   14            | varDeclList • COMMA error

    SEMICOLON  shift, and go to state 36
    COMMA      shift, and go to state 27


State 23

   18 varDeclInit: error COLON • simpleExp

    error        shift, and go to state 37
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    BOOLCONST    shift, and go to state 42
    MINUS        shift, and go to state 43
    MULT         shift, and go to state 44
    QMARK        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47

    simpleExp    go to state 48
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 57
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 24

   22 varDeclId: error RBRACKET •

    $default  reduce using rule 22 (varDeclId)


State 25

   20 varDeclId: ID LBRACKET • NUMCONST RBRACKET
   21          | ID LBRACKET • error

    error     shift, and go to state 61
    NUMCONST  shift, and go to state 62


State 26

    8 varDecl: error varDeclList SEMICOLON •

    $default  reduce using rule 8 (varDecl)


State 27

   12 varDeclList: varDeclList COMMA • varDeclInit
   14            | varDeclList COMMA • error

    error  shift, and go to state 63
    ID     shift, and go to state 13

    varDeclInit  go to state 64
    varDeclId    go to state 16


State 28

   17 varDeclInit: varDeclId COLON • simpleExp

    error        shift, and go to state 37
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    BOOLCONST    shift, and go to state 42
    MINUS        shift, and go to state 43
    MULT         shift, and go to state 44
    QMARK        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47

    simpleExp    go to state 65
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 57
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 29

   30 funDecl: ID LPAREN error •

    $default  reduce using rule 30 (funDecl)


State 30

   36 parmTypeList: typeSpec • parmIdList
   37             | typeSpec • error

    error  shift, and go to state 66
    ID     shift, and go to state 67

    parmIdList  go to state 68
    parmId      go to state 69


State 31

   27 funDecl: ID LPAREN parms • RPAREN compoundStmt
   31        | ID LPAREN parms • RPAREN error

    RPAREN  shift, and go to state 70


State 32

   32 parms: parmList •
   34 parmList: parmList • SEMICOLON parmTypeList

    SEMICOLON  shift, and go to state 71

    $default  reduce using rule 32 (parms)


State 33

   35 parmList: parmTypeList •

    $default  reduce using rule 35 (parmList)


State 34

    9 varDecl: typeSpec error SEMICOLON •

    $default  reduce using rule 9 (varDecl)


State 35

   26 funDecl: typeSpec ID LPAREN • parms RPAREN compoundStmt
   29        | typeSpec ID LPAREN • error

    error  shift, and go to state 72
    BOOL   shift, and go to state 3
    CHAR   shift, and go to state 4
    INT    shift, and go to state 5

    RPAREN  reduce using rule 33 (parms)

    typeSpec      go to state 30
    parms         go to state 73
    parmList      go to state 32
    parmTypeList  go to state 33


State 36

    7 varDecl: typeSpec varDeclList SEMICOLON •

    $default  reduce using rule 7 (varDecl)


State 37

  140 call: error • LPAREN

    LPAREN  shift, and go to state 74


State 38

  133 mutable: ID •
  134        | ID • LBRACKET exp RBRACKET
  139 call: ID • LPAREN args RPAREN

    LBRACKET  shift, and go to state 75
    LPAREN    shift, and go to state 76

    $default  reduce using rule 133 (mutable)


State 39

  146 constant: NUMCONST •

    $default  reduce using rule 146 (constant)


State 40

  147 constant: CHARCONST •

    $default  reduce using rule 147 (constant)


State 41

  148 constant: STRINGCONST •

    $default  reduce using rule 148 (constant)


State 42

  149 constant: BOOLCONST •

    $default  reduce using rule 149 (constant)


State 43

  128 unaryop: MINUS •

    $default  reduce using rule 128 (unaryop)


State 44

  129 unaryop: MULT •

    $default  reduce using rule 129 (unaryop)


State 45

  130 unaryop: QMARK •

    $default  reduce using rule 130 (unaryop)


State 46

  103 unaryRelExp: NOT • unaryRelExp
  105            | NOT • error

    error        shift, and go to state 77
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    BOOLCONST    shift, and go to state 42
    MINUS        shift, and go to state 43
    MULT         shift, and go to state 44
    QMARK        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47

    unaryRelExp  go to state 78
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 57
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 47

  135 immutable: LPAREN • exp RPAREN
  138          | LPAREN • error

    error        shift, and go to state 79
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    BOOLCONST    shift, and go to state 42
    MINUS        shift, and go to state 43
    MULT         shift, and go to state 44
    QMARK        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47

    exp          go to state 80
    simpleExp    go to state 81
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 82
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 48

   18 varDeclInit: error COLON simpleExp •
   97 simpleExp: simpleExp • OR andExp
   99          | simpleExp • OR error

    OR  shift, and go to state 83

    $default  reduce using rule 18 (varDeclInit)


State 49

   98 simpleExp: andExp •
  100 andExp: andExp • AND unaryRelExp
  102       | andExp • AND error

    AND  shift, and go to state 84

    $default  reduce using rule 98 (simpleExp)


State 50

  101 andExp: unaryRelExp •

    $default  reduce using rule 101 (andExp)


State 51

  104 unaryRelExp: relExp •

    $default  reduce using rule 104 (unaryRelExp)


State 52

  106 relExp: sumExp • relop sumExp
  107       | sumExp •
  114 sumExp: sumExp • sumop mulExp
  116       | sumExp • sumop error

    NEQ          shift, and go to state 85
    LEQ          shift, and go to state 86
    GEQ          shift, and go to state 87
    PLUS         shift, and go to state 88
    MINUS        shift, and go to state 89
    EQUALS       shift, and go to state 90
    LESSTHAN     shift, and go to state 91
    GREATERTHAN  shift, and go to state 92

    $default  reduce using rule 107 (relExp)

    relop  go to state 93
    sumop  go to state 94


State 53

  115 sumExp: mulExp •
  119 mulExp: mulExp • mulop unaryExp
  121       | mulExp • mulop error

    DIVIDE   shift, and go to state 95
    MULT     shift, and go to state 96
    PERCENT  shift, and go to state 97

    $default  reduce using rule 115 (sumExp)

    mulop  go to state 98


State 54

  120 mulExp: unaryExp •

    $default  reduce using rule 120 (mulExp)


State 55

  125 unaryExp: unaryop • unaryExp
  127         | unaryop • error

    error        shift, and go to state 99
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    BOOLCONST    shift, and go to state 42
    MINUS        shift, and go to state 43
    MULT         shift, and go to state 44
    QMARK        shift, and go to state 45
    LPAREN       shift, and go to state 47

    unaryExp   go to state 100
    unaryop    go to state 55
    factor     go to state 56
    mutable    go to state 57
    immutable  go to state 58
    call       go to state 59
    constant   go to state 60


State 56

  126 unaryExp: factor •

    $default  reduce using rule 126 (unaryExp)


State 57

  131 factor: mutable •

    $default  reduce using rule 131 (factor)


State 58

  132 factor: immutable •

    $default  reduce using rule 132 (factor)


State 59

  136 immutable: call •

    $default  reduce using rule 136 (immutable)


State 60

  137 immutable: constant •

    $default  reduce using rule 137 (immutable)


State 61

   21 varDeclId: ID LBRACKET error •

    $default  reduce using rule 21 (varDeclId)


State 62

   20 varDeclId: ID LBRACKET NUMCONST • RBRACKET

    RBRACKET  shift, and go to state 101


State 63

   14 varDeclList: varDeclList COMMA error •
   18 varDeclInit: error • COLON simpleExp
   22 varDeclId: error • RBRACKET

    COLON     shift, and go to state 23
    RBRACKET  shift, and go to state 24

    $default  reduce using rule 14 (varDeclList)


State 64

   12 varDeclList: varDeclList COMMA varDeclInit •

    $default  reduce using rule 12 (varDeclList)


State 65

   17 varDeclInit: varDeclId COLON simpleExp •
   97 simpleExp: simpleExp • OR andExp
   99          | simpleExp • OR error

    OR  shift, and go to state 83

    $default  reduce using rule 17 (varDeclInit)


State 66

   37 parmTypeList: typeSpec error •
   41 parmIdList: error •

    SEMICOLON  reduce using rule 37 (parmTypeList)
    SEMICOLON  [reduce using rule 41 (parmIdList)]
    COMMA      reduce using rule 41 (parmIdList)
    RPAREN     reduce using rule 37 (parmTypeList)
    RPAREN     [reduce using rule 41 (parmIdList)]
    $default   reduce using rule 37 (parmTypeList)


State 67

   42 parmId: ID •
   43       | ID • LBRACKET RBRACKET

    LBRACKET  shift, and go to state 102

    $default  reduce using rule 42 (parmId)


State 68

   36 parmTypeList: typeSpec parmIdList •
   38 parmIdList: parmIdList • COMMA parmId
   40           | parmIdList • COMMA error

    COMMA  shift, and go to state 103

    $default  reduce using rule 36 (parmTypeList)


State 69

   39 parmIdList: parmId •

    $default  reduce using rule 39 (parmIdList)


State 70

   27 funDecl: ID LPAREN parms RPAREN • compoundStmt
   31        | ID LPAREN parms RPAREN • error

    error  shift, and go to state 104
    START  shift, and go to state 105

    compoundStmt  go to state 106


State 71

   34 parmList: parmList SEMICOLON • parmTypeList

    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4
    INT   shift, and go to state 5

    typeSpec      go to state 30
    parmTypeList  go to state 107


State 72

   29 funDecl: typeSpec ID LPAREN error •

    $default  reduce using rule 29 (funDecl)


State 73

   26 funDecl: typeSpec ID LPAREN parms • RPAREN compoundStmt

    RPAREN  shift, and go to state 108


State 74

  140 call: error LPAREN •

    $default  reduce using rule 140 (call)


State 75

  134 mutable: ID LBRACKET • exp RBRACKET

    error        shift, and go to state 109
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    BOOLCONST    shift, and go to state 42
    MINUS        shift, and go to state 43
    MULT         shift, and go to state 44
    QMARK        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47

    exp          go to state 110
    simpleExp    go to state 81
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 82
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 76

  139 call: ID LPAREN • args RPAREN

    error        shift, and go to state 109
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    BOOLCONST    shift, and go to state 42
    MINUS        shift, and go to state 43
    MULT         shift, and go to state 44
    QMARK        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47

    RPAREN  reduce using rule 142 (args)

    exp          go to state 111
    simpleExp    go to state 81
    andExp       go to state 49
    unaryRelExp  go to state 50
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 82
    immutable    go to state 58
    call         go to state 59
    args         go to state 112
    argList      go to state 113
    constant     go to state 60


State 77

  105 unaryRelExp: NOT error •
  140 call: error • LPAREN

    LPAREN  shift, and go to state 74

    $default  reduce using rule 105 (unaryRelExp)


State 78

  103 unaryRelExp: NOT unaryRelExp •

    $default  reduce using rule 103 (unaryRelExp)


State 79

   88 exp: error • assignop exp
   90    | error • INC
   91    | error • DEC
  138 immutable: LPAREN error •
  140 call: error • LPAREN

    INC        shift, and go to state 114
    DEC        shift, and go to state 115
    ASGN       shift, and go to state 116
    ADDASGN    shift, and go to state 117
    MINUSASGN  shift, and go to state 118
    MULTASGN   shift, and go to state 119
    DIVASGN    shift, and go to state 120
    LPAREN     shift, and go to state 74

    $default  reduce using rule 138 (immutable)

    assignop  go to state 121


State 80

  135 immutable: LPAREN exp • RPAREN

    RPAREN  shift, and go to state 122


State 81

   87 exp: simpleExp •
   97 simpleExp: simpleExp • OR andExp
   99          | simpleExp • OR error

    OR  shift, and go to state 83

    $default  reduce using rule 87 (exp)


State 82

   84 exp: mutable • assignop exp
   85    | mutable • INC
   86    | mutable • DEC
   89    | mutable • assignop error
  131 factor: mutable •

    INC        shift, and go to state 123
    DEC        shift, and go to state 124
    ASGN       shift, and go to state 116
    ADDASGN    shift, and go to state 117
    MINUSASGN  shift, and go to state 118
    MULTASGN   shift, and go to state 119
    DIVASGN    shift, and go to state 120

    $default  reduce using rule 131 (factor)

    assignop  go to state 125


State 83

   97 simpleExp: simpleExp OR • andExp
   99          | simpleExp OR • error

    error        shift, and go to state 126
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    BOOLCONST    shift, and go to state 42
    MINUS        shift, and go to state 43
    MULT         shift, and go to state 44
    QMARK        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47

    andExp       go to state 127
    unaryRelExp  go to state 50
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 57
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 84

  100 andExp: andExp AND • unaryRelExp
  102       | andExp AND • error

    error        shift, and go to state 128
    ID           shift, and go to state 38
    NUMCONST     shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    BOOLCONST    shift, and go to state 42
    MINUS        shift, and go to state 43
    MULT         shift, and go to state 44
    QMARK        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47

    unaryRelExp  go to state 129
    relExp       go to state 51
    sumExp       go to state 52
    mulExp       go to state 53
    unaryExp     go to state 54
    unaryop      go to state 55
    factor       go to state 56
    mutable      go to state 57
    immutable    go to state 58
    call         go to state 59
    constant     go to state 60


State 85

  113 relop: NEQ •

    $default  reduce using rule 113 (relop)


State 86

  109 relop: LEQ •

    $default  reduce using rule 109 (relop)


State 87

  111 relop: GEQ •

    $default  reduce using rule 111 (relop)


State 88

  117 sumop: PLUS •

    $default  reduce using rule 117 (sumop)


State 89

  118 sumop: MINUS •

    $default  reduce using rule 118 (sumop)


State 90

  112 relop: EQUALS •

    $default  reduce using rule 112 (relop)


State 91

  108 relop: LESSTHAN •

    $default  reduce using rule 108 (relop)


State 92

  110 relop: GREATERTHAN •

    $default  reduce using rule 110 (relop)


State 93

  106 relExp: sumExp relop • sumExp
